Fleshing out models after doing some Postman testing of the TaxJar API, prepping to introduce the Logic classes next and spin up the RestSharp client.

--- a/TaxService/TaxService.csproj
+++ b/TaxService/TaxService.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\TaxJar\TaxRates\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
+  </ItemGroup>
+
 </Project>
