Couple things didn't save at first

--- a/TaxService.DataAccess/TaxService.DataAccess.csproj
+++ b/TaxService.DataAccess/TaxService.DataAccess.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TaxService\TaxService.csproj" />
+    <ProjectReference Include="..\TaxService.Models\TaxService.Models.csproj" />
   </ItemGroup>
 
 </Project>
