--- a/TaxServiceUnitTests/TaxServiceUnitTests.csproj
+++ b/TaxServiceUnitTests/TaxServiceUnitTests.csproj
@@ -8,12 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TaxService.DataAccess\TaxService.DataAccess.csproj" />
     <ProjectReference Include="..\TaxService\TaxService.csproj" />
   </ItemGroup>
 
