--- a/TaxServiceProvider.TaxJar/TaxServiceProvider.TaxJar.csproj
+++ b/TaxServiceProvider.TaxJar/TaxServiceProvider.TaxJar.csproj
@@ -1,18 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RestSharp" Version="106.11.7" />
-    <PackageReference Include="RestSharp.Serializers.NewtonsoftJson" Version="106.11.7" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TaxService.Models\TaxService.Models.csproj" />
-    <ProjectReference Include="..\TaxServiceProvider.TaxJar\TaxServiceProvider.TaxJar.csproj" />
   </ItemGroup>
 
 </Project>
