Incremental improvements and additions to Exception handling and logging

--- a/TaxServiceIntegrationTests/TaxService.Tests.Integration.csproj
+++ b/TaxServiceIntegrationTests/TaxService.Tests.Integration.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TaxService\TaxService.csproj" />
+    <ProjectReference Include="..\TaxServiceProvider.TaxJar\TaxServiceProvider.TaxJar.csproj" />
   </ItemGroup>
 
 </Project>
