--- a/TaxServiceProvider.TaxJar/TaxServiceProvider.TaxJar.csproj
+++ b/TaxServiceProvider.TaxJar/TaxServiceProvider.TaxJar.csproj
@@ -7,10 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="RestSharp" Version="106.11.7" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.EventLog" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TaxService.Models\TaxService.Models.csproj" />
+    <ProjectReference Include="..\TaxService\TaxService.csproj" />
   </ItemGroup>
 
 </Project>
